fixed jump on settings page

--- a/src/components/ProductList/ProductList.less
+++ b/src/components/ProductList/ProductList.less
@@ -95,7 +95,7 @@
       display: flex;
       align-items: center;
       padding: 0 1.1428571428571428rem;
-      margin: 0.2857142857142857rem 0;
+      margin: 5px 0;
       background: #FFFFFF;
       border: 1px solid #F5F5FF;
       border-radius: 8px;
@@ -383,11 +383,11 @@
     flex-direction: column;
     justify-content: center;
     padding: 0.7142857142857143rem 1.5714285714285714rem 0.7142857142857143rem 0.8571428571428571rem;
-    margin: 0.2857142857142857rem 0;
+    margin: 5px 0;
     position: relative;
     min-height: 5.714285714285714rem;
     opacity: 0.5;
-    border: 1px solid #C9CBD4;
+    background: #ffffff;
     border-radius: 8px;
     box-sizing: border-box;
 
