--- a/src/index.less
+++ b/src/index.less
@@ -557,8 +557,7 @@ button.btn {
     color: #6D6DF6;
 
     &:hover {
-      box-shadow: 0px 6px 10px rgba(44, 48, 58, 0.2),
-      0px 0px 10px rgba(44, 48, 58, 0.2);
+      background: #f0f0f0;
     }
   }
 
@@ -573,10 +572,7 @@ button:disabled,
 button[disabled] {
   cursor: not-allowed;
   filter: grayscale(100%);
-
-  &:hover {
-    opacity: .6;
-  }
+  pointer-events: none;
 }
 
 /*
