--- a/src/pages/PPCAutomate/Dayparting/OutBudget/OutBudget.less
+++ b/src/pages/PPCAutomate/Dayparting/OutBudget/OutBudget.less
@@ -288,6 +288,7 @@
     display: flex;
     justify-content: space-between;
     margin: 20px 0 20px 0;
+    height: 32px;
 
 
     .btn {
@@ -308,6 +309,10 @@
           background: #f0f0f0;
         }
       }
+    }
+
+    .ant-spin {
+      margin: 0 auto;
     }
   }
 
