--- a/src/pages/PPCAutomate/ProductSettings/ProductsList/TableSettings.less
+++ b/src/pages/PPCAutomate/ProductSettings/ProductsList/TableSettings.less
@@ -142,7 +142,7 @@
 
     .open-children-list-button {
       font-size: 1rem; // 14px
-      width: 3.5714286em;
+      //width: 3.5714286em;
       height: 1.4285714em;
       display: flex;
       align-items: center;
